# yui

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  forge.toml
.agents/: MEMORIES.md
agent/: Dockerfile  entrypoint.sh
frontend/: .env.example  .prettierignore  eslint.config.js  package.json  playwright.config.ts  vite.config.ts
frontend/.forge/svelte/: ForgeProvider.svelte  client.ts  context.ts  datetime.ts  index.ts  package.json  stores.ts  types.ts
frontend/src/lib/forge/: api.ts  index.ts  runes.svelte.ts  stores.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/: global-setup.ts  home.spec.ts
migrations/: 0001_initial.sql  0001_initial.sql.example
src/: main.rs
src/functions/: audit.rs  clock.rs  context.rs  dashboard.rs  delivery.rs  gateway.rs  mod.rs  reply.rs  runtime.rs  triage.rs
src/schema/: cron.rs  event.rs  job.rs  log_entry.rs  message.rs  mod.rs  outbox.rs
src/services/: agent_executor.rs  agent_runner.rs  ai.rs  embedding.rs  media_preprocessor.rs  mod.rs  reply_client.rs  triage_client.rs
