[package]
name = "yui"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[features]
default = ["embedded-frontend"]
embedded-frontend = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
forge = { version = "0.2.0", package = "forgex" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
axum = "0.8"
bcrypt = "0.17"
jsonwebtoken = "9"
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
forge = { version = "0.2.0", package = "forgex", features = ["embedded-db"] }

[build-dependencies]
which = "7"
