[package]
name = "yui"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[features]
default = ["embedded-frontend"]
embedded-frontend = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
forge = { version = "0.2.0", package = "forgex" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
axum = "0.8"
anyhow = "1"
base64 = "0.22"
async-trait = "0.1"
qr2term = "0.3"
cron = "0.15"
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json"] }
fastembed = { path = "/Users/supiri/Projects/OSS/fastembed-rs" }
whatsapp-rust = { path = "/Users/supiri/Projects/OSS/whatsapp-rust" }
whatsapp-rust-tokio-transport = { path = "/Users/supiri/Projects/OSS/whatsapp-rust/transports/tokio-transport" }
whatsapp-rust-ureq-http-client = { path = "/Users/supiri/Projects/OSS/whatsapp-rust/http_clients/ureq-client" }
wacore = { path = "/Users/supiri/Projects/OSS/whatsapp-rust/wacore" }
waproto = { path = "/Users/supiri/Projects/OSS/whatsapp-rust/waproto" }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
forge = { version = "0.2.0", package = "forgex", features = ["embedded-db"] }

[build-dependencies]
which = "7"
